I think this is the key: hide #main with css and then show it with js to prevent pre-js flicker

--- a/corehq/apps/hqwebapp/static/hqwebapp/css/core.css
+++ b/corehq/apps/hqwebapp/static/hqwebapp/css/core.css
@@ -171,6 +171,8 @@ footer {
 
 #main {
     margin-top: 40px;
+    /* to prevent flicker */
+    display: none;
 }
 #main > div {
 }
